Fixed similarity.tex for loop

--- a/res/vis/similarity.tex
+++ b/res/vis/similarity.tex
@@ -15,7 +15,7 @@
 \pgfmathtruncatemacro{\maxelemindex}{\pgfplotsretval-1}
 \def\offset{4}
 
-\foreach \elemindex in {\offset,...,4}{
+\foreach \elemindex in {\offset,...,\maxelemindex}{
 
     \clearpage
     
