Reduced opacity, fixed paths, log scale

--- a/res/vis/cumexpvar.tex
+++ b/res/vis/cumexpvar.tex
@@ -22,53 +22,53 @@
                   ymax=100]
     \nextgroupplot[title={$\zeta=1$, sp}]
     \pgfplotsset{cycle list shift=0}
-    \addplot table {../out/sp1cumexpvar.dat};
+    \addplot table {../../out/sp1cumexpvar.dat};
     \nextgroupplot[title={$\zeta=1$, mup}]
     \pgfplotsset{cycle list shift=+1}
-    \addplot table {../out/mup1cumexpvar.dat};
+    \addplot table {../../out/mup1cumexpvar.dat};
     \nextgroupplot[title={$\zeta=1$, mupthresh}]
     \pgfplotsset{cycle list shift=+2}
-    \addplot table {../out/mupthresh1cumexpvar.dat};
+    \addplot table {../../out/mupthresh1cumexpvar.dat};
 
     \nextgroupplot[title={$\zeta=2$, sp}]
     \pgfplotsset{cycle list shift=0}
-    \addplot table {../out/sp2cumexpvar.dat};
+    \addplot table {../../out/sp2cumexpvar.dat};
     \nextgroupplot[title={$\zeta=2$, mup}]
     \pgfplotsset{cycle list shift=+1}
-    \addplot table {../out/mup2cumexpvar.dat};
+    \addplot table {../../out/mup2cumexpvar.dat};
     \nextgroupplot[title={$\zeta=2$, mupthresh}]
     \pgfplotsset{cycle list shift=+2}
-    \addplot table {../out/mupthresh2cumexpvar.dat};
+    \addplot table {../../out/mupthresh2cumexpvar.dat};
 
     \nextgroupplot[title={$\zeta=4$, sp}]
     \pgfplotsset{cycle list shift=0}
-    \addplot table {../out/sp4cumexpvar.dat};
+    \addplot table {../../out/sp4cumexpvar.dat};
     \nextgroupplot[title={$\zeta=4$, mup}]
     \pgfplotsset{cycle list shift=+1}
-    \addplot table {../out/mup4cumexpvar.dat};
+    \addplot table {../../out/mup4cumexpvar.dat};
     \nextgroupplot[title={$\zeta=4$, mupthresh}]
     \pgfplotsset{cycle list shift=+2}
-    \addplot table {../out/mupthresh4cumexpvar.dat};
+    \addplot table {../../out/mupthresh4cumexpvar.dat};
 
     \nextgroupplot[title={$\zeta=8$, sp}]
     \pgfplotsset{cycle list shift=0}
-    \addplot table {../out/sp8cumexpvar.dat};
+    \addplot table {../../out/sp8cumexpvar.dat};
     \nextgroupplot[title={$\zeta=8$, mup}]
     \pgfplotsset{cycle list shift=+1}
-    \addplot table {../out/mup8cumexpvar.dat};
+    \addplot table {../../out/mup8cumexpvar.dat};
     \nextgroupplot[title={$\zeta=8$, mupthresh}]
     \pgfplotsset{cycle list shift=+2}
-    \addplot table {../out/mupthresh8cumexpvar.dat};
+    \addplot table {../../out/mupthresh8cumexpvar.dat};
 
     \nextgroupplot[title={$\zeta=16$, sp}]
     \pgfplotsset{cycle list shift=0}
-    \addplot table {../out/sp16cumexpvar.dat};
+    \addplot table {../../out/sp16cumexpvar.dat};
     \nextgroupplot[title={$\zeta=16$, mup}]
     \pgfplotsset{cycle list shift=+1}
-    \addplot table {../out/mup16cumexpvar.dat};
+    \addplot table {../../out/mup16cumexpvar.dat};
     \nextgroupplot[title={$\zeta=16$, mupthresh}]
     \pgfplotsset{cycle list shift=+2}
-    \addplot table {../out/mupthresh16cumexpvar.dat};
+    \addplot table {../../out/mupthresh16cumexpvar.dat};
 \end{groupplot}
 \end{tikzpicture}
 \end{figure}
